# graphics_visual_computing

./: .gitignore  bresenham uitleg.odt  cohen sutherland uitleg.odt  graphics_sv.odt  mvp_uitleg.odt  resources.txt
les 2/framework/: ActiveEdgeTable.cpp  CMakeLists.txt  DrawTool.cpp  DrawTool.h  EdgeTable.cpp  EdgeTableRow.cpp  main.cpp
les 3/framework/: CMakeLists.txt  DrawTool.cpp  DrawTool.h  Point.h  Polygon.cpp  RGBColor.cpp
les 4/framework/: Bezier.cpp  Bezier.h  CMakeLists.txt  DrawTool.cpp  DrawTool.h  EdgeTableRow.h  Face.h  FileLoader.cpp  FileLoader.h  Line.cpp  Object.h  ParamCubeCurve.cpp  ParamCubeCurve.h  Point.cpp  Polygon.h  RGBColor.h  objects.txt
les 4/framework/includes/glm/cmake/glm/: glmConfig.cmake
les 6/raytrace_zs/: CMakeLists.txt  RGBColor.h  Ray.h  RayHit.h  RayTracer.cpp  RayTracer.h  Scene.cpp  Scene.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  main.cpp
les 6/raytrace_zs/includes/glm/: CMakeLists.txt
les 6/raytrace_zs/includes/glm/cmake/glm/: glmConfig.cmake
les1/framework/: ActiveEdgeTable.cpp  ActiveEdgeTable.h  CMakeLists.txt  DrawTool.cpp  DrawTool.h  Edge.cpp  Edge.h  EdgeTable.h  Line.h  Point.h  RGBColor.cpp  RGBColor.h  main.cpp
